Issue #8438: Remove reference to the missing "surrogateescape" encoding error handler from the new IO library.